--- a/app/app/src/main/res/anim/fade_in.xml
+++ b/app/app/src/main/res/anim/fade_in.xml
@@ -3,12 +3,15 @@
     <alpha
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
-        android:duration="300"
+        android:duration="500"
         android:interpolator="@android:anim/decelerate_interpolator" />
-    
-    <translate
-        android:fromYDelta="50dp"
-        android:toYDelta="0dp"
-        android:duration="300"
+    <scale
+        android:fromXScale="0.9"
+        android:fromYScale="0.9"
+        android:toXScale="1.0"
+        android:toYScale="1.0"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:duration="500"
         android:interpolator="@android:anim/decelerate_interpolator" />
 </set>
