--- a/app/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/app/src/main/res/layout/fragment_graphs.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:textColor="@color/text_secondary"
+        android:textColor="@color/text_primary"
         android:gravity="center"
         android:text="Select a chart and tap Generate"
         android:textSize="16sp" />
