--- a/app/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,25 +3,25 @@
     <item
         android:id="@+id/nav_dashboard"
         android:icon="@drawable/ic_dashboard"
-        android:title="@string/nav_dashboard" />
+        android:title="Home" />
     
     <item
         android:id="@+id/nav_tasks"
         android:icon="@drawable/ic_tasks"
-        android:title="@string/nav_tasks" />
+        android:title="Tasks" />
     
     <item
         android:id="@+id/nav_habits"
         android:icon="@drawable/ic_habits"
-        android:title="@string/nav_habits" />
+        android:title="Habits" />
     
     <item
         android:id="@+id/nav_goals"
         android:icon="@drawable/ic_goals"
-        android:title="@string/nav_goals" />
+        android:title="Goals" />
 
     <item
         android:id="@+id/nav_graphs"
         android:icon="@drawable/ic_dashboard"
-        android:title="@string/nav_graphs" />
+        android:title="Graphs" />
 </menu>
